--- a/exercicios/exercicio22/fundo4.html
+++ b/exercicios/exercicio22/fundo4.html
@@ -3,18 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personalização dos fundos</title>
+    <title>Posicionamento</title>
     <style>
         body {
-            background-image: url(img/pattern001.png);
-            background-size: 100px 100px;
+            background-image: url(https://raw.githubusercontent.com/gustavoguanabara/html-css/master/imagens/mascote.png);
+
+            background-size: 100px;
             background-repeat: no-repeat;
         }
     </style>
 </head>
 
 <body>
-    <h1>Teste de fundo</h1>
+    
 </body>
 
 </html>
