--- a/exercicios/exercicio22/fundo5.html
+++ b/exercicios/exercicio22/fundo5.html
@@ -3,18 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personalização dos fundos</title>
+    <title>Posicionamento</title>
     <style>
         body {
-            background-image: url(img/pattern001.png);
-            background-size: 100px 100px;
-            background-repeat: no-repeat;
+            height: 98vh;
+            background-image: url('img/wallpaper003.jpg');
+            background-position: right bottom;
         }
     </style>
 </head>
-
 <body>
-    <h1>Teste de fundo</h1>
+    
 </body>
-
 </html>
