mais uma att do ex22

--- a/exercicios/exercicio22/fundo6.html
+++ b/exercicios/exercicio22/fundo6.html
@@ -3,15 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixo de tela</title>
     <style>
         body {
             height: 100vh;
+            /*
+            Definindo os valores individualmente
+            
             background-color: black;
             background-image: url("img/wallpaper002.jpg");
             background-position: center center;
             background-repeat: no-repeat;
             background-size: cover;
+            background-attachment: fixed;
+            */
+
+            /* Shorthand - background
+                color > image > position > / > [size] > repeat > attachment
+            */
+
+            background: black url('img/wallpaper002.jpg') center center / cover no-repeat fixed
+            
         }
 
         main {
@@ -29,6 +41,8 @@
     <main>
         <h1>Teste de imagem de fundo</h1>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illum iusto quod illo laborum corporis, non minima excepturi. Voluptatibus ipsam, labore dolores ea voluptates odit magni laudantium asperiores consequuntur, vitae adipisci, nisi cupiditate? Nesciunt labore pariatur possimus nobis, similique ipsum! Ipsum libero consequuntur cupiditate ullam voluptates natus illum sint error numquam optio quod possimus aliquam culpa, sit nihil illo? A consequuntur sint consequatur fugit quo? Ducimus temporibus debitis, fuga quisquam nulla at consectetur facere esse maiores veniam, eum, aliquam non. Aut nostrum odit laudantium harum nam est. Obcaecati consectetur, modi aspernatur a inventore est rem, minus non dolor quas nihil animi!</p>
+        <h2>Outro título teste</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima sequi sint labore dolore soluta, nam fugiat doloremque vero tempora omnis voluptatem neque consectetur odit fuga veritatis harum sunt mollitia dolores explicabo maiores consequuntur illo fugit veniam. Saepe optio iusto impedit ipsa in tempora qui, beatae, voluptas, omnis quam dicta soluta. Lorem ipsum dolor sit amet consectetur, adipisicing elit. At minus accusamus rerum animi deleniti possimus aut, veritatis aspernatur tempora autem soluta, aperiam, atque earum iure vitae enim optio repellendus voluptatibus omnis. Vitae exercitationem, perspiciatis repellat asperiores odio soluta rem nemo quibusdam iusto voluptatum tempora aliquid placeat deleniti eos fuga doloribus. Illum hic enim magni facilis quibusdam. Perferendis quae delectus iusto ducimus sit veniam dolore facilis tenetur eius, iste aliquid velit esse maiores porro. Recusandae quisquam eveniet corporis? Laboriosam reprehenderit placeat repellat necessitatibus, rem magnam ad, dolorum porro numquam voluptatibus modi quaerat quis ea recusandae debitis! Quidem sequi maxime blanditiis consectetur! Ab quasi quod molestiae tempore, enim cum veniam minima ipsam saepe architecto quaerat, debitis voluptate sunt fugit numquam unde esse accusantium id laboriosam repellendus ipsa iure consequuntur modi. Voluptate corrupti dolorum rerum vero fugit ex, a soluta nobis cupiditate! Ab at cum, quisquam eveniet molestias, distinctio voluptas ipsa esse, tempora tenetur debitis! Perferendis temporibus libero, nostrum cum laborum pariatur officiis explicabo magni soluta, sit necessitatibus ducimus? Deleniti enim inventore odio, exercitationem aut cupiditate, fugit laudantium optio accusamus minus delectus ipsam. Sint provident aperiam ipsum ipsa? Voluptates cum, nihil sed nesciunt maiores aliquam repellendus molestias labore quia eum illum, consequatur quod?</p>
     </main>
 </body>
 
